# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  generate_changelog.sh  release-drafter.yml  release.yml
.github/actions/code-quality/: action.yml
.github/actions/common/: setup-python-poetry.yml
.github/actions/setup-env/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/setup/: action.yml
.github/workflows/: ci_check_release.yml  config.yml  create-release.yml  format.yml  initialize.yml  lint.yml  main.yml  release.yml  setup.yml  setup_environment.yml  test.yml  type-check.yml
.github/workflows/format/: action.yml
.github/workflows/setup/: action.yml
backup/: setup.yml
backupdir/: create-release.yml  lint.yml  setup.yml  test.yml
src/: exa.py  main.py
