[project]
name = "python-template"
version = "0.8.3"
description = "Used to templatize python projects."
authors = [{ name = "Loïc Motheu", email = "lmotheu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
ruff = "^0.13.3"

[tool.ruff]
src = ["src"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "COM812", "ISC001", "D213", "FA102"]
fixable = ["ALL"]
unfixable = []
exclude = ["tests/*"]

[tool.mypy]
exclude = "tests/*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
